# Actix-Web-Guide

./: README.md
basic-examples/actix-crud-operations/: .env.example  .gitignore  Cargo.toml  readme.md
basic-examples/actix-crud-operations/src/: main.rs
basic-examples/actix-crud-operations/src/queries/: delete.sql  get_users.sql  update.sql
production-ready/actix-todo/: .env.example  Cargo.toml  readme.md
production-ready/actix-todo/src/: main.rs
production-ready/actix-todo/src/queries/: create_todo_items_table.sql  create_users_table.sql  register.sql
production-ready/actix-web-starter/: .gitignore
production-ready/actix-web-starter/src/: main.rs
