[package]
name = "actix-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9"
chrono = "0.4"
serde_json = "1.0.145"
future-utils = "0.12.1"
